# horse_race_prob_engine

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: base.yaml  features.yaml  training.yaml
data/processed/: .gitkeep
data/raw/: .gitkeep
notebooks/: exploratory_analysis.ipynb
src/: AGENTS.md
src/horse_race_prob_engine/: __init__.py  config.py  logging_config.py  schemas.py
src/horse_race_prob_engine/api/: __init__.py
src/horse_race_prob_engine/data/: __init__.py
src/horse_race_prob_engine/features/: __init__.py
src/horse_race_prob_engine/modeling/: __init__.py
src/horse_race_prob_engine/utils/: __init__.py
tests/: AGENTS.md  __init__.py
